2009-08-06  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-info.c (imsettings_info_notify_properties):
	Fix a memory leak.

2009-07-27  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: update the soname info.

	* src/factory.c (imsettings_manager_real_start_im): skip starting
	the real process for immodule only conf.
	(imsettings_manager_real_whats_im_running): revert the previous change
	and better handling for immodule only conf.

	* imsettings/imsettings-info.c (imsettings_info_is_immodule_only): NEW
	to check for the object if it's immodule only or not.

2009-07-23  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (imsettings_manager_real_whats_im_running): Support
	immodule only configuration file.

2009-04-13  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_protocol_real_xim_forward_event):
	Fix an underflow of pending counter.

2009-04-07  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.106.2

	* backends/xim/proxy.c (_weak_notify_conn_cb): avoid a segfault related
	to reconnection. (rhbz#488899)

	* data/xinput.sh.in.in: export IMSETTINGS_MODULE.

2009-04-06  Akira TAGOH  <tagoh@redhat.com>

	Fix no creation of .xinputrc with stopping IM. (rhbz#490587)

	* src/factory.c (_update_symlink): Use customizable homedir stored in
	IMSettingsMonitor instead of g_get_homedir.
	(imsettings_manager_real_stop_im): likewise.
	(imsettings_manager_real_stop_im): check if current IM for an user is
	same to the requested module too, to update .xinputrc.

	* tests/rhbz_490587.c: new testcase.

	* utils/imsettings-start.c (main): Use IMSETTINGS_MODULE prior to look
	up from imsettings to ensure IM running for certain locales. (rhbz#493406)

2009-04-01  Akira TAGOH  <tagoh@redhat.com>

	Have a workaround to avoid a freeze issue on applications not
	supporting reconnecting IC. (rhbz#488877)

	* backends/xim/proxy.c (xim_proxy_ic_new): new.
	(xim_proxy_ic_free): new.